<resources>
    <string name="app_name">S.C.H.I.E.T. Squash</string>
    <string name="main_welcome">Welcome at the trainings page!</string>
    <string name="main_training_subscribe">Upcoming trainings. Please register if you will be present.</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_admin">Admin</string>
    <string name="contact_info">Contact information</string>
    <string name="admin_info">Admin page</string>
    <string name="alertdialog_open_admin_user">Username</string>
    <string name="alertdialog_open_admin_password">Password</string>
    <string name="delete_button_description">DeleteButton</string>
    <string name="register">Name</string>
    <string name="title_activity_admin2">AdminActivity2</string>
    <string name="menuSignIn">Sign in</string>
    <string name="registerButton">Register</string>
    <string name="email">Email</string>
    <string name="registrationName">Name</string>
    <string name="password">Password</string>
    <string name="registerNewUser">Register</string>
    <string name="menuAccount">Account</string>
    <string name="menuSignOut">Sign out</string>
    <string name="signIn">Sign in</string>
    <string name="sign_in_left"><![CDATA[<< Sign in]]></string>
    <string name="register_left"><![CDATA[<< Register]]></string>
    <string name="forgot_password_right"><![CDATA[Forgot password >>]]></string>
    <string name="sign_in_right"><![CDATA[Sign in >>]]></string>
    <string name="change_date">change date</string>
    <string name="change_start">change start</string>
    <string name="change_end">change end</string>
    <string name="short_info">Kind of training</string>
    <string name="trainer">Trainer</string>
    <string name="maximum_registrations">Maximum participants</string>
    <string name="example_training_info">Here you will put the information about the training</string>
    <string name="example_training_date">Thu, Jun 23, \'16</string>
    <string name="example_training_start">20:00 until 21:00</string>
    <string name="example_training_trainer">By: Name</string>
    <string name="example_training_registered">participants: 0</string>
    <string name="example_training_max">Max participants: 99</string>
    <string name="example_message_user">Stephan Kok\n2016–06–21 16:45</string>
    <string name="example_message_message">The message</string>
    <string name="subject_of_training">Subject of training</string>
    <string name="request_new_password">Request new password</string>
    <string name="remember_me">Remember me</string>
    <string name="s_c_h_i_e_t_squash">S.C.H.I.E.T. Squash</string>
    <string name="science_park_306">Science Park 306</string>
    <string name="_1098_xh_amsterdam">1098 XH Amsterdam</string>
    <string name="call_squash">Call S.C.H.I.E.T. Squash: Send us an email and we will call you back as soon as we can.</string>
    <string name="telefoon_usc_baan_reserveren">Telefoon USC (baan reserveren):</string>
    <string name="phone_USC">020 5258955</string>
    <string name="e_mail">E-Mail:</string>
    <string name="website">Website:</string>
    <string name="http_www_schietsquash_nl">http://www.schietsquash.nl</string>
    <string name="website_usc">Website USC:</string>
    <string name="http_www_usc_nl">http://www.usc.nl</string>
    <string name="facebook">Facebook:</string>
    <string name="fb_squash">http://www.facebook.com/schietsquashamsterdam</string>
    <string name="email_schiet">info@schietsquash.nl</string>
</resources>
