<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_adress"
        android:gravity="center"
        android:id="@+id/emailEditText"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/registrationName"
        android:gravity="center"
        android:id="@+id/usernameEditText"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:id="@+id/controlPasswordEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@color/red_error"
        android:id="@+id/registerError"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/registerNewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/registerNewUser"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Sending"
        custom:pb_textError="Error"
        custom:pb_colorError="@color/red_error" />

</LinearLayout>